--- a/res/layout/object_details_activity.xml
+++ b/res/layout/object_details_activity.xml
@@ -2,99 +2,262 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    	<TableLayout
-            android:layout_width="300dp"
-            android:layout_height="fill_parent" >
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_marginRight="10dp">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="@string/object_title"
-                    android:textStyle="bold" />
+        <TableRow >
+            <TextView
+                android:layout_width="wrap_content"
+                android:height="50dp"
+                android:layout_span="2"
+                android:gravity="bottom"
+                android:text="@string/object_informations"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+        </TableRow>
 
-                <TextView
-                    android:id="@+id/textTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left" />
+        <TableRow>
+            <View 
+                android:layout_height="1dp"
+                android:layout_span="2"
+            	android:layout_width="fill_parent"
+            	android:background="#FFFFFF"/>
             </TableRow>
 
-            <TableRow
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_title"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textTitle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="match_parent"
+                android:minWidth="100dp"
+                android:gravity="left" />
+        </TableRow>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="@string/object_createdate"
-                    android:textStyle="bold" />
+        <TableRow>
 
-                <TextView
-                    android:id="@+id/textCreateDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_uploaddate"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textUploadDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_tags"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textTags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_comments"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_span="2"
+                android:gravity="bottom"
+                android:text="@string/object_exif_informations"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow>
+            <View 
+                android:layout_height="1dp"
+                android:layout_span="2"
+            	android:layout_width="fill_parent"
+            	android:background="#FFFFFF"/>
             </TableRow>
 
-            <TableRow
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_createdate"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textExifCreateDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_aperture"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textExifAperture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_exposure"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textExifExposure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_flash"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textExifFlash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_focallength"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textExifFocalLength"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_iso"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="@string/object_uploaddate"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textExifISO"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
 
-                <TextView
-                    android:id="@+id/textUploadDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left" />
-            </TableRow>
+        <TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_make"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="@string/object_tags"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textExifMake"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
 
-                <TextView
-                    android:id="@+id/textTags"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left" />
-            </TableRow>
+        <TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/object_exif_model"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="@string/object_comments"
-                    android:textStyle="bold" />
-            </TableRow>
-        </TableLayout>
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent" 
-            android:contentDescription="@string/app_name"
-            android:scaleType="fitCenter"
-            android:visibility="gone"/>
+            <TextView
+                android:id="@+id/textExifModel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:gravity="left"
+                android:text="@string/object_exif_whitebalance"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textExifWhiteBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left" />
+        </TableRow>
+    </TableLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/app_name"
+        android:scaleType="fitCenter"
+        android:visibility="gone" />
+
 </LinearLayout>
