--- a/res/layout/image_view_activity.xml
+++ b/res/layout/image_view_activity.xml
@@ -85,6 +85,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="left" />
+
+                <ProgressBar
+                    android:id="@+id/progressBarTags"
+                    style="@android:style/Widget.ProgressBar.Small" 
+                    android:visibility="gone"/>
             </TableRow>
 
             <TableRow>
