--- a/res/layout/image_view_activity.xml
+++ b/res/layout/image_view_activity.xml
@@ -267,6 +267,74 @@
                     android:layout_height="wrap_content"
                     android:gravity="left" />
             </TableRow>
+            <TableRow>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_span="2"
+                    android:gravity="bottom"
+                    android:text="@string/object_geo_informations"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
+            </TableRow>
+
+            <TableRow>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_span="2"
+                    android:background="#FFFFFF" />
+            </TableRow>
+            <TableRow>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:gravity="left"
+                    android:text="@string/object_geo_lat"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textGeoLat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left" />
+            </TableRow>
+            <TableRow>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:gravity="left"
+                    android:text="@string/object_geo_long"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textGeoLong"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left" />
+            </TableRow>
+            <TableRow>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:gravity="left"
+                    android:text="@string/object_geo_height"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textGeoHeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left" />
+            </TableRow>
         </TableLayout>
 
         <Gallery
