--- a/res/layout/image_view_activity.xml
+++ b/res/layout/image_view_activity.xml
@@ -82,24 +82,18 @@
 
                 <TextView
                     android:id="@+id/textTags"
-                    android:layout_width="wrap_content"
+                    android:layout_weight="2"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="left" />
 
                 <ProgressBar
                     android:id="@+id/progressBarTags"
-                    style="@android:style/Widget.ProgressBar.Small" 
-                    android:visibility="gone"/>
-            </TableRow>
-
-            <TableRow>
-
-                <TextView
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="@string/object_comments"
-                    android:textStyle="bold" />
+                    style="@android:style/Widget.ProgressBar.Small"
+                    android:visibility="gone" />
             </TableRow>
 
             <TableRow>
@@ -267,6 +261,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="left" />
             </TableRow>
+
             <TableRow>
 
                 <TextView
@@ -287,6 +282,7 @@
                     android:layout_span="2"
                     android:background="#FFFFFF" />
             </TableRow>
+
             <TableRow>
 
                 <TextView
@@ -303,6 +299,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="left" />
             </TableRow>
+
             <TableRow>
 
                 <TextView
@@ -319,6 +316,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="left" />
             </TableRow>
+
             <TableRow>
 
                 <TextView
@@ -334,6 +332,54 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="left" />
+            </TableRow>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="bottom"
+                    android:height="50dp"
+                    android:text="@string/object_comments"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_weight="2"
+                    android:textStyle="bold" />
+
+                <ProgressBar
+                    android:id="@+id/progressBarComments"
+                    style="@android:style/Widget.ProgressBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <TableRow>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_span="2"
+                    android:background="#FFFFFF" />
+            </TableRow>
+
+            <TableRow>
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_span="2" >
+
+                    <LinearLayout
+                        android:id="@+id/layoutComments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
+                </ScrollView>
             </TableRow>
         </TableLayout>
 
