--- a/res/layout/image_view_activity.xml
+++ b/res/layout/image_view_activity.xml
@@ -80,20 +80,24 @@
                     android:text="@string/object_tags"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textTags"
-                    android:layout_weight="2"
+                <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left" />
+                    android:layout_height="wrap_content">
 
-                <ProgressBar
-                    android:id="@+id/progressBarTags"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@android:style/Widget.ProgressBar.Small"
-                    android:visibility="gone" />
+                    <TextView
+                        android:id="@+id/textTags"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:visibility="gone"/>
+
+                    <ProgressBar
+                        android:id="@+id/progressBarTags"
+                        style="@android:style/Widget.Holo.ProgressBar.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+                </LinearLayout>
             </TableRow>
 
             <TableRow>
@@ -339,23 +343,15 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="bottom"
                     android:height="50dp"
                     android:text="@string/object_comments"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_weight="2"
                     android:textStyle="bold" />
 
-                <ProgressBar
-                    android:id="@+id/progressBarComments"
-                    style="@android:style/Widget.ProgressBar.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:visibility="gone" />
+                
             </LinearLayout>
 
             <TableRow>
@@ -366,20 +362,30 @@
                     android:layout_span="2"
                     android:background="#FFFFFF" />
             </TableRow>
-
-            <TableRow>
-
+			<TableRow>
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+               	android:layout_span="2"
+               	android:orientation="vertical">
+				<ProgressBar
+                    android:id="@+id/progressBarComments"
+                    style="@android:style/Widget.Holo.ProgressBar.Large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
                 <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_span="2" >
-
+                    android:layout_height="wrap_content" >
+					
                     <LinearLayout
                         android:id="@+id/layoutComments"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical" />
                 </ScrollView>
+            </LinearLayout>
             </TableRow>
         </TableLayout>
 
