FIX: correct and simplify the layout
close #48

--- a/res/layout/image_view_activity.xml
+++ b/res/layout/image_view_activity.xml
@@ -13,7 +13,7 @@
 
         <de.raptor2101.GalDroid.Activities.Views.ImageInformationView
             android:id="@+id/viewImageInformations"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="fill_parent"
             android:layout_marginRight="10dp"/>
 
